--- a/index.html
+++ b/index.html
@@ -12,7 +12,32 @@
 </head>
 <body>
   <video height="300px" width="500">
-    <source src="new.mp4" type="video/mp4" controls muted autoplay loop="9">
+    <source src="1.mp4" type="video/ts" controls muted autoplay loop="9">
+    <source src="2.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="3.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="4.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="5.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="6.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="7.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="8.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="9.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="10.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="11.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="12.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="13.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="14.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="15.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="16.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="17.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="18.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="19.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="20.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="21.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="22.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="23.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="24.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="25.ts" type="video/ts" controls muted autoplay loop="9">
+    <source src="26.ts" type="video/ts" controls muted autoplay loop="9">
   </video>
 </body>
 </html>
